--- a/theme/src/scss/content-elements/textpic.scss
+++ b/theme/src/scss/content-elements/textpic.scss
@@ -15,6 +15,15 @@
   text-align: left;
 }
 
+.text-img-above-left .ce-textpic__picture .picture-partial__item-img,
+.text-img-below-left .ce-textpic__picture .picture-partial__item-img,
+.text-img-above-right .ce-textpic__picture .picture-partial__item-img,
+.text-img-below-right .ce-textpic__picture .picture-partial__item-img,
+.text-img-above-center .ce-textpic__picture .picture-partial__item-img,
+.text-img-below-center .ce-textpic__picture .picture-partial__item-img {
+  width: auto;
+}
+
 .text-img-above-right .ce-textpic__picture,
 .text-img-below-right .ce-textpic__picture {
   text-align: right;
