--- a/theme/src/scss/main.scss
+++ b/theme/src/scss/main.scss
@@ -32,8 +32,8 @@
 @use 'content-elements/big-icon-text-link';
 @use 'content-elements/image-text-link';
 @use 'content-elements/icon-text-link';
-// @use 'content-elements/contact-card';
-// @use 'content-elements/quote';
+@use 'content-elements/contact-card';
+@use 'content-elements/quote';
 // @use 'content-elements/divider-icon';
 
 // ===== appearance =====
