[TASK] update start page layout

--- a/Resources/Private/Templates/Page/StartPage.html
+++ b/Resources/Private/Templates/Page/StartPage.html
@@ -92,12 +92,16 @@
       <div class="container-wrp inverted-bg-color pt-5 pb-5 pt-lg-7 pb-lg-7">
         <div class="container">
           <div class="row g-5 justify-content-around">
-            <div class="col-lg-5 align-self-center">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3322}" />
             </div>
 
-            <div class="col-lg-5 align-self-center">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5002}" />
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3323}" />
+            </div>
+
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3324}" />
             </div>
           </div>
         </div>
@@ -171,7 +175,7 @@
 
       <div class="container-wrp gray-90-bg-color pt-5 pb-5">
         <div class="container">
-          <div class="row ">
+          <div class="row g-5">
             <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3310}" />
             </div>
