--- a/Resources/Private/Templates/ContentElements/Static/IconTextLink.html
+++ b/Resources/Private/Templates/ContentElements/Static/IconTextLink.html
@@ -17,7 +17,9 @@
 
     <div class="ce-icon-text-link">
 
-      <div class="ce-icon-text-link__icon-header">
+      <div class="ce-icon-text-link__icon-header
+      {f:if(condition: '{data.header_position} == right' , then: ' ce-icon-text-link--header-right')}
+      {f:if(condition: '{data.header_position} == center' , then: ' ce-icon-text-link--header-center')}">
         <f:if condition="{data.icon}">
           <div class="ce-icon-text-link__icon-wrp">
             <t3kit:render.svg src="{data.icon}" class="t3icon ce-icon-text-link__icon {data.icon_class}" />
