[TASK] update BE layouts

--- a/Resources/Private/Templates/Page/StartPage.html
+++ b/Resources/Private/Templates/Page/StartPage.html
@@ -75,15 +75,15 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3304}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3307}" />
             </div>
 
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3305}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3308}" />
             </div>
 
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3306}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3309}" />
             </div>
           </div>
         </div>
@@ -93,15 +93,15 @@
         <div class="container">
           <div class="row g-5 justify-content-around">
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3322}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3313}" />
             </div>
 
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3323}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3314}" />
             </div>
 
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3324}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3315}" />
             </div>
           </div>
         </div>
@@ -125,7 +125,7 @@
         <div class="container">
           <div class="row">
             <div class="offset-lg-1 col-lg-10">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:8300}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:8302}" />
             </div>
           </div>
         </div>
@@ -135,11 +135,11 @@
         <div class="container">
           <div class="row g-0 justify-content-between">
             <div class="col-lg-5 align-self-center">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5005}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5007}" />
             </div>
 
             <div class="col-lg-6  align-self-center figure-lg-margin-0">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5006}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5008}" />
             </div>
           </div>
         </div>
@@ -149,7 +149,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-9">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:8301}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:8305}" />
             </div>
           </div>
         </div>
@@ -158,16 +158,16 @@
       <div class="container-wrp pt-3 pb-5">
         <div class="container">
           <div class="row justify-content-center ">
-            <div class="col-lg-3">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3307}" />
+            <div class="col-lg-3 pb-5 pb-lg-0">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3319}" />
             </div>
 
-            <div class="col-lg-3">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3308}" />
+            <div class="col-lg-3 pb-5 pb-lg-0">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3320}" />
             </div>
 
-            <div class="col-lg-3">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3309}" />
+            <div class="col-lg-3 pb-5 pb-lg-0">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3321}" />
             </div>
           </div>
         </div>
@@ -177,15 +177,15 @@
         <div class="container">
           <div class="row g-5">
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3310}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3325}" />
             </div>
 
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3311}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3326}" />
             </div>
 
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3312}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3327}" />
             </div>
           </div>
         </div>
@@ -195,11 +195,11 @@
         <div class="container">
           <div class="row g-0">
             <div class="col-lg-6 align-self-center figure-lg-margin-0">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5007}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5011}" />
             </div>
 
-            <div class="col-lg-4 offset-lg-1 align-self-center">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5008}" />
+            <div class="col-lg-5 col-xl-4 offset-lg-1 align-self-center">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5012}" />
             </div>
           </div>
         </div>
@@ -208,12 +208,12 @@
       <div class="container-wrp">
         <div class="container">
           <div class="row g-0">
-            <div class="offset-lg-1 col-lg-4 align-self-center">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5009}" />
+            <div class="col-lg-5 align-self-center">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5015}" />
             </div>
 
             <div class="col-lg-6 offset-lg-1 align-self-center figure-lg-margin-0">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5010}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5016}" />
             </div>
           </div>
         </div>
@@ -223,15 +223,15 @@
         <div class="container">
           <div class="row g-xl-5 justify-content-center">
             <div class="col-lg-3">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3313}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3331}" />
             </div>
 
             <div class="col-lg-3">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3314}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3332}" />
             </div>
 
             <div class="col-lg-3">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3315}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3333}" />
             </div>
           </div>
         </div>
@@ -241,25 +241,81 @@
         <div class="container">
           <div class="row g-0 ">
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3316}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3337}" />
             </div>
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3317}" />
-            </div>
-
-            <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3318}" />
-            </div>
-            <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3319}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3338}" />
             </div>
 
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3320}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3339}" />
+            </div>
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3343}" />
             </div>
 
             <div class="col-lg-4">
-              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3321}" />
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3344}" />
+            </div>
+
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3345}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp pt-5 pb-5 pt-lg-6 pb-lg-6">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1008}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp ">
+        <div class="container">
+          <div class="row g-5 justify-content-around">
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3349}" />
+            </div>
+
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3350}" />
+            </div>
+
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3351}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp pt-5 pb-5 pt-lg-6 pb-lg-6">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1012}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp pb-5 pb-lg-7">
+        <div class="container">
+          <div class="row g-5 justify-content-around">
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3355}" />
+            </div>
+
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3356}" />
+            </div>
+
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3357}" />
             </div>
           </div>
         </div>
